circles on intro page really centered; better hover states

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6700,8 +6700,13 @@ body {
     top: auto;
   }
 }
+.static-page.home-page .container {
+  height: 100%;
+}
 .intro {
-  margin-top: 13%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .intro .nav-circle.big {
   margin: 0 auto 30px auto;
@@ -6709,13 +6714,19 @@ body {
 .circle-link {
   position: relative;
   background: #1b4c64;
+  line-height: 2;
+  padding: 10px 0px;
 }
 .circle-link:hover {
   border-color: transparent;
+  text-decoration: none;
+}
+.circle-link:hover .triangle {
+  border-color: #c76400 transparent transparent transparent;
 }
 .circle-link .triangle,
 .circle-link .triangle2 {
-  margin: 10px auto;
+  margin: 0px auto;
   width: 0;
   height: 0;
   border-style: solid;
@@ -6723,7 +6734,7 @@ body {
   border-color: #fa7e00 transparent transparent transparent;
 }
 .circle-link .triangle2 {
-  margin-top: -33px;
+  margin-top: -23px;
   border-color: #1b4c64 transparent transparent transparent;
 }
 .overlay {
