--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -544,9 +544,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5aaaa', end
                                              
 // ########################################################################################################################
                                              
-
+.static-page.home-page .container {
+  height:100%;
+}
   .intro {
-    margin-top:13%;
+    // margin-top:13%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   .intro {
@@ -560,23 +565,27 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5aaaa', end
   position: relative;
   background: #1b4c64;
   // border: 4px solid #fa7e00;
-
+  line-height:2;
+  padding:10px 0px;
   &:hover {
     border-color:transparent;
+    text-decoration: none;
+    .triangle {
+      border-color: darken(#fa7e00,10%) transparent transparent transparent;
+    }
   }
 
   .triangle,
   .triangle2 {
-    margin:10px auto;
+    margin:0px auto;
     width: 0;
     height: 0;
     border-style: solid;
     border-width: 20px 40px 0 40px;
     border-color: #fa7e00 transparent transparent transparent;
-
   }
   .triangle2 {
-    margin-top:-33px;
+    margin-top:-23px;
     border-color: #1b4c64 transparent transparent transparent;
   }
 
