--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -8,20 +8,37 @@
     <div class="row">
       <div class="col-sm-4 col-sm-offset-4">
 
-        <p class="first-p">Eine Kooperation zwischen ZDF und Medieninnovationszentrum Babelsberg MIZ
+        <p class="first-p">
+          Eine Kooperation zwischen ZDF und Medieninnovationszentrum Babelsberg MIZ
+        </p>
 
-
-        <p>
-Projektleitung: <br/>Hubert Krech (ZDF); Tanja Peuker (MIZ)<br/><br/>
-Recherche und Redaktion: <br/>Michael Hartlep, Jan Schneider, Dominik Wurnig (MIZ); Julia Kiehne (ZDF)<br/><br/>
-Idee und Konzept: <br/>Frederic Huwendiek, Hubert Krech (ZDF); Michael Hartlep, Jan Schneider, Dominik Wurnig (MIZ); Marco Maas (OpenDataCity)<br/><br/>
-Technische Betreuung: <br/>Jens Moeke (ZDF)<br/><br/>
-Datenbank und Visualisierung: <br/>OpenDataCity<br/><br/>
-Plug-In-Programmierung: <br/>Wegewerk<br/><br/>
-Design: <br/>Michaela Waldow (ZDF) und Felix Feierabend (Dreimorgen, Frankfurt)<br/><br/>
-Umsetzung: <br/>Felix Feierabend (Dreimorgen, Frankfurt)</p>
-        <p>Mit Dank an Alexander Barnickel, Jonas Bergmeier (Projekt Cahoots) und Tigerbytes</p>
-</p>
+        <p>Projektleitung: <br />
+Hubert Krech (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>); Tanja Peuker (<a href="http://www.miz-babelsberg.de/" target="_blank" title="Zu miz-babelsberg.de">MIZ</a>)<br />
+<br />
+Recherche und Redaktion: <br />
+Michael Hartlep, Jan Schneider, Dominik Wurnig (<a href="http://www.miz-babelsberg.de/" target="_blank" title="Zu miz-babelsberg.de">MIZ</a>); Julia Kiehne (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>)<br />
+<br />
+Idee und Konzept: <br />
+Frederic Huwendiek, Hubert Krech (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>); Michael Hartlep, Jan Schneider, Dominik Wurnig (<a href="http://www.miz-babelsberg.de/" target="_blank" title="Zu miz-babelsberg.de">MIZ</a>); Marco Maas (<a href="https://opendatacity.de/" target="_blank" title="Zu opendatacity.de">OpenDataCity</a>)<br />
+<br />
+Design: <br />
+Michaela Waldow (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>) und Felix Feierabend (<a href="http://www.dreimorgen.com/" target="_blank" title="Zu dreimorgen.com">Dreimorgen</a>, Frankfurt)<br />
+<br />
+Datenbank und Visualisierung: <br />
+<a href="https://opendatacity.de/" target="_blank" title="Zu opendatacity.de">OpenDataCity</a><br />
+<br />
+Plug-In-Programmierung: <br />
+<a href="http://www.wegewerk.com/" target="_blank" title="Zu wegewerk.com">Wegewerk</a><br />
+<br />
+Umsetzung: <br />
+Felix Feierabend (<a href="http://www.dreimorgen.com/" target="_blank" title="Zu dreimorgen.com">Dreimorgen</a>, Frankfurt)<br />
+<br />
+Technische Betreuung: <br />
+Jens Moeke, Rolf Zimmermann (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>)<br />
+<br />
+Produktion:<br />
+Alexandra Zurwonne (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>)<br />
+Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes</p>
       </div>
     </div>
 
