--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6759,6 +6759,10 @@ body {
     margin-top: 150px;
   }
 }
+.abspann-page a {
+  color: #ddd;
+  text-decoration: underline;
+}
 .about-intro {
   line-height: 1.35;
   margin-top: 20px;
@@ -6806,6 +6810,7 @@ p.first-p {
 .faq-page .panel-default .panel-heading {
   background-color: transparent!important;
   border: 0px!important;
+  padding-left: 0px;
 }
 .faq-page .panel-default .panel-heading a {
   color: white;
@@ -6819,6 +6824,7 @@ p.first-p {
   font-family: "FontAwesome";
 }
 .faq-page .panel-default .panel-body {
+  padding-left: 0px;
   border-top: 0px!important;
 }
 .modal {
