--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -7,16 +7,13 @@
 
 		
 		<div class="row">
-			<div class="col-sm-6">
-				
-				<h1>Donec ullamcorper nulla non metus auctor fringilla.</h1>
-				<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-				<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
-				<p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
 
-			</div>
 
-			<div class="col-sm-6">
+			<div class="col-sm-8 col-md-offset-2">
+        <h1>FAQ und Hilfe</h1>
+        <p>
+          Das Lobbyradar ist eine investigative und innovative Datenbank-Visualisierung. Sie können selbst durch das Netzwerk der Macht navigieren und spannende Verbindungen aufspüren. Und Sie können sich mit dem Lobbyradar-Plugin die Verbindungen genau dort anzeigen lassen, wo Sie gerade im Internet unterwegs sind.
+        </p>
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingOne">
@@ -85,6 +82,8 @@
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                Wir versuchen, alle relevanten Lobby-Akteure und deren Verbindungen abzubilden. Es gibt aber Personen und Organisationen, die nicht in unseren Datensätzen und auch nicht in den Medien auftauchen. Deshalb sind sie in unserer Datenbank nicht zu finden - selbst, wenn sie Verbindungen zu Lobbyverbänden haben. Sie fliegen (noch) unter dem Lobbyradar-Schirm. Wir wollen das ändern und Sie können uns dabei helfen. Wenn Sie Lobbyismus transparenter machen und Akteure und Verbindungen ergänzen wollen, einfach hier klicken!
+               <br/><br/>
+               Verstorbene Personen, die zu ihren Lebzeiten prägnante Verbindungen hatten, sind nicht Bestandteil von Lobbyradar.
               </div>
             </div>
           </div>
