--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -180,6 +180,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a5aaaa', end
     margin-top:-20px;
     // display: block;
     // margin: -10px auto 5px auto;
+
+
+    &.newspaper {
+      padding:9px 11px;
+    }
   }
 }
 
