--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -37,7 +37,7 @@ Wie funktioniert der Lobbyradar? Was kann der User selbst machen? Hier sind alle
       <div class="col-sm-6 col-md-6 col-lg-3">
         <div id="news" class="nav-circle big">
 
-        <div class="nav-circle small">
+        <div class="nav-circle small newspaper">
         <i class="fa fa-newspaper-o"></i>
         </div>
         <h2>Alle Beiträge zum<br/>Lobbyradar</h2>
