add imprint and contact to abspann

--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -38,7 +38,12 @@ Jens Moeke, Rolf Zimmermann (<a href="http://www.zdf.de/" target="_blank" title=
 <br />
 Produktion:<br />
 Alexandra Zurwonne (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>)<br />
-Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes</p>
+Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes
+
+<br /><br /><br />
+<a href="http://www.zdf.de/impressum-21494968.html" alt="Impressum ZDF">Impressum</a><br />
+<a href="mailto://lobbyradar@zdf.de?subject=Kontakt" alt="Kontakt ZDF">Kontakt</a></p>
+
       </div>
     </div>
 
