Add Open Graph Meta Tags and Share Image

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -14,12 +14,26 @@
 	<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/assets/js/moment-with-locales.min.js"></script>
-	
 	<script type="text/javascript" src="/assets/js/main.js"></script>
 
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
 	<!--[if lt IE 9]><script src="/assets/js/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+
+	{{! Opem Graph Snippets }}
+	<meta property="og:title" content="ZDFLobbyradar">
+	<meta property="og:site_name" content="ZDFLobbyradar">
+	<meta property="og:url" content="http://lobbyradar.opendatacloud.de/">
+	<meta property="og:description" content="Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="http://lobbyradar.opendatacloud.de/assets/images/logo-share.png" />
+
+	{{! Twitter Cards }}
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@ZDFLobbyradar">
+	<meta name="twitter:title" content="ZDFLobbyradar">
+	<meta name="twitter:description" content="Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich 	Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.">
+	<meta name="twitter:image:src" content="http://lobbyradar.opendatacloud.de/assets/images/logo-share.png">
 
 </head>
 <body>
