fix links to live domain

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -23,17 +23,17 @@
 	{{! Opem Graph Snippets }}
 	<meta property="og:title" content="ZDFLobbyradar">
 	<meta property="og:site_name" content="ZDFLobbyradar">
-	<meta property="og:url" content="http://lobbyradar.opendatacloud.de/">
+	<meta property="og:url" content="https://www.lobbyradar.de/">
 	<meta property="og:description" content="Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="http://lobbyradar.opendatacloud.de/assets/images/logo-share.png" />
+	<meta property="og:image" content="https://www.lobbyradar.de/assets/images/logo-share.png" />
 
 	{{! Twitter Cards }}
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ZDFLobbyradar">
 	<meta name="twitter:title" content="ZDFLobbyradar">
 	<meta name="twitter:description" content="Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich 	Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.">
-	<meta name="twitter:image:src" content="http://lobbyradar.opendatacloud.de/assets/images/logo-share.png">
+	<meta name="twitter:image:src" content="https://www.lobbyradar.de/assets/images/logo-share.png">
 
 </head>
 <body>
