--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -37,7 +37,7 @@
 
 <script type="text/javascript" src="/assets/js/visualisation.js"></script>
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
-<script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/graph.js"></script>
+<script type="text/javascript" src="https://www.lobbyradar.de/lobbynetwork/graph.js"></script>
 <script type="text/javascript" src="/assets/js/networkviz.js"></script>
 
 {{>footer}}
