--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -85,6 +85,6 @@
 </div>
 
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
-<script type="text/javascript" src="http://lobbyradar.opendatacloud.de/lobbynetwork/graph.js"></script>
+<script type="text/javascript" src="https://www.lobbyradar.de/lobbynetwork/graph.js"></script>
 <script type="text/javascript" src="/assets/js/networkviz.js"></script>
 {{>footer}}
