--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -35,10 +35,10 @@
 
 				<li class="social-links">
 
-					<a href="javascript:fbShare('http://lobbyradar.opendatacloud.de', 'ZDFLobbyradar', 'Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich 	Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.','http://lobbyradar.opendatacloud.de/assets/images/logo-share.png', 520, 350)"><i class="fa fa-facebook"></i></a>
+					<a href="javascript:fbShare('https://www.lobbyradar.de', 'ZDFLobbyradar', 'Wie arbeiten Lobbyisten? Welche Auswirkungen hat ihre Arbeit? Und wie wirkt sich 	Lobbyismus auf unsere Demokratie aus? Der Lobbyradar ist ein multimediales datenjournalistisches Onlineprojekt.','https://www.lobbyradar.de/assets/images/logo-share.png', 520, 350)"><i class="fa fa-facebook"></i></a>
 					<a class="tweet" href="#"><i class="fa fa-twitter"></i></a>
-					<a href="https://plus.google.com/share?url=http://lobbyradar.opendatacloud.de" onclick="javascript:window.open('https://plus.google.com/share?url=http://lobbyradar.opendatacloud.de','', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'); return false;"><i class="fa fa-google-plus"></i></a>
-					<a href="mailto:?subject=Wie sind Politik und Wirtschaft verknüpft? ZDFLobbyradar&body=http://lobbyradar.opendatacloud.de"><i class="fa fa-envelope"></i></a>
+					<a href="https://plus.google.com/share?url=https://www.lobbyradar.de" onclick="javascript:window.open('https://plus.google.com/share?url=https://www.lobbyradar.de','', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'); return false;"><i class="fa fa-google-plus"></i></a>
+					<a href="mailto:?subject=Wie sind Politik und Wirtschaft verknüpft? ZDFLobbyradar&body=https://www.lobbyradar.de"><i class="fa fa-envelope"></i></a>
 				</li>
 
 			</ul>
