embed the correct video

--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -1,26 +1,22 @@
 {{>header}}
 {{>nav-grey}}
 {{>nav-blue}}
+
 <div class="static-page">
-<div class="container">
+	<div class="container">
 		<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
-		<h1>So funktioniert ZDFLobbyradar</h1>
-			
-					</div>
-	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
-			<br/><br/>
-
-			<div class="videoWrapper">
-				<iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
+			<div class="col-sm-8 col-sm-offset-2">
+				<h1>So funktioniert ZDFLobbyradar</h1>
 			</div>
-				
 		</div>
-		
+		<div class="row">
+			<div class="col-sm-8 col-sm-offset-2">
+				<br/><br/>
+				<div class="videoWrapper">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/wBd-OttnVUk" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
 	</div>
-
-		
-	</div>
-</div></div>
+</div>
 {{>footer}}
