--- a/assets/views/articles.mustache
+++ b/assets/views/articles.mustache
@@ -3,12 +3,11 @@
 {{>nav-blue}}
 <div class="static-page">
 	<div class="container">
-		
 		<div class="row">
 			<div class="col-sm-4">
 				<h1>Beiträge zum Lobbyradar</h1>
 				<p class="intro-copy">
-					Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. MaecenasVivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur. Sed 	posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit.
+					ZDF-Lobbyradar bringt Transparenz in das Netzwerk der Macht. Sehen Sie hier alle Beiträge zum Lobbyradar!
 				</p>
 			</div>
 			<div class="col-sm-8">
