--- a/assets/views/footer.mustache
+++ b/assets/views/footer.mustache
@@ -1,2 +1,14 @@
+<!-- /SZM --> 
+<script type="text/javascript" src=http://script.ioam.de/iam.js language="JavaScript"></script>
+<!-- SZM VERSION="2.0" -->
+<script type="text/javascript"> 
+  var iam_data = { 
+        "st":"heute",
+        "cp":"ZH/heutede", 
+        "co":"Modul/lobbyradar/A032361", 
+        "sv":"ke" 
+   };
+   iom.c(iam_data,1); 
+</script>
 </body>
 </html>
