--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6314,7 +6314,7 @@ button.close {
 input.lobbysearch {
   font-size: 18px;
   border: 0px;
-  padding: 15px;
+  padding: 0 15px;
   height: 45px;
 }
 .btn-lobbysearch {
@@ -6324,6 +6324,10 @@ input.lobbysearch {
   z-index: 999;
   border: 0px;
   color: #1b4c64;
+}
+.theme-switch {
+  position: relative;
+  z-index: 99;
 }
 .videoWrapper {
   position: relative;
@@ -6874,6 +6878,13 @@ p.first-p {
   .fullscreen {
     padding-top: 0px;
   }
+}
+#relationviz-wrapper {
+  position: fixed;
+  width: 100%;
+  top: 46px;
+  left: 0;
+  bottom: 0px;
 }
 #networkviz-wrapper {
   position: fixed;
