--- a/assets/views/relation.mustache
+++ b/assets/views/relation.mustache
@@ -3,12 +3,34 @@
 {{>nav-blue}}
 
 <div class="fullscreen">
+  
+  <div class="container" id="main">
+    <div class="row">
+      <div class="col-sm-6 viewport-info col-sm-push-6">
+    
+      </div>
+      <div class="col-sm-6 col-sm-pull-6 viewport-visual">
+        <form class="theme-switch" name="form">
+          <select name="link" SIZE="1" onChange="window.location.href = document.form.link.options[document.form.link.selectedIndex].value;">
+            <option selected value=""> </option>
+            <option value="/relation/pharma"> Pharma </option>
+            <option value="/relation/bank"> Bank </option>
+            <option value="/relation/ruestung"> Rüstung </option>
+            <option value="/relation/verkehr"> Verkehr </option>
+            <option value="/relation/seitenwechsler"> Seitenwechsler </option>
+            <option value="/verbindungssuche"> Gesamtansicht </option>
+          </select>
+        </form>
+      </div>
+    </div>
+  </div>
 
-
-	{{! The Visualisation }}
-	<div style="display:block; height: 100%; margin-top: 130px;" id="rel_viz">
-		<!--<div id="rel_viz"></div>-->
-	</div>
+  {{! The Visualisation }}
+  <div id="relationviz-wrapper">
+    <div style="display:block; height: 100%; margin-top: 130px;" id="rel_viz">
+      <!--<div id="rel_viz"></div>-->
+    </div>  
+  </div>
 
 </div> {{! end .fullscreen }}
 
