--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -22,15 +22,17 @@
 
 			<div class="col-sm-6 col-sm-pull-6 viewport-visual">
 				<form class="theme-switch" name="form">
-<select name="link" SIZE="1" onChange="window.location.href = document.form.link.options[document.form.link.selectedIndex].value;">
-<option selected value="/verbindungssuche"> Gesamtansicht </option>
-<option value="/relation/pharma"> Pharma </option>
-<option value="/relation/bank"> Bank </option>
-<option value="/relation/ruestung"> Rüstung </option>
-<option value="/relation/verkehr"> Verkehr </option>
-<option value="/relation/seitenwechsler"> Seitenwechsler </option>
-</select>
-</form>
+					<label>
+						<select name="link" SIZE="1" onChange="window.location.href = document.form.link.options[document.form.link.selectedIndex].value;">
+							<option selected value="/verbindungssuche"> Gesamtansicht </option>
+							<option value="/relation/pharma"> Pharma </option>
+							<option value="/relation/bank"> Bank </option>
+							<option value="/relation/ruestung"> Rüstung </option>
+							<option value="/relation/verkehr"> Verkehr </option>
+							<option value="/relation/seitenwechsler"> Seitenwechsler </option>
+						</select>
+					</label>
+				</form>
 
 
 			</div>
