--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -9,7 +9,7 @@
       <div class="col-sm-4 col-sm-offset-4">
 
         <p class="first-p">
-          Eine Kooperation zwischen ZDF und Medieninnovationszentrum Babelsberg MIZ
+          Eine Kooperation zwischen ZDF und Medieninnovationszentrum Babelsberg (MIZ)
         </p>
 
         <p>Projektleitung: <br />
