--- a/assets/views/relation.mustache
+++ b/assets/views/relation.mustache
@@ -7,7 +7,7 @@
   <div class="container" id="main">
     <div class="row">
       <div class="col-sm-6 viewport-info col-sm-push-6">
-    
+        {{>vizinfo}}
       </div>
       <div class="col-sm-6 hidden-xs col-sm-pull-6 viewport-visual">
         <form class="theme-switch" name="form">
