call Zählpixel via HTTPS

--- a/assets/views/footer.mustache
+++ b/assets/views/footer.mustache
@@ -1,14 +1,12 @@
-<!--&lt;!&ndash; /SZM &ndash;&gt; -->
-<!--<script type="text/javascript" src=http://script.ioam.de/iam.js language="JavaScript"></script>-->
-<!--&lt;!&ndash; SZM VERSION="2.0" &ndash;&gt;-->
-<!--<script type="text/javascript"> -->
-  <!--var iam_data = { -->
-        <!--"st":"heute",-->
-        <!--"cp":"ZH/heutede", -->
-        <!--"co":"Modul/lobbyradar/A032361", -->
-        <!--"sv":"ke" -->
-   <!--};-->
-   <!--iom.c(iam_data,1); -->
-<!--</script>-->
+<script type="text/javascript" src=https://script.ioam.de/iam.js language="JavaScript"></script>
+<script type="text/javascript"> 
+  var iam_data = { 
+        "st":"heute",
+        "cp":"ZH/heutede", 
+        "co":"Modul/lobbyradar/A032361", 
+        "sv":"ke" 
+   };
+   iom.c(iam_data,1); 
+</script>
 </body>
 </html>
