fix typo; change wording for theme switch

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -75,13 +75,21 @@ input.lobbysearch {
 .theme-switch {
   position: fixed;
   z-index: 99;
+
+  .theme-switch-label {
+    float: left;
+    background: #FFF;
+    color:#999;
+    padding: 10px 0px 10px 15px;
+  }
   select {
     padding:10px;
     margin: 0;
     width:100%;
     background: #FFF;
-    color:#888;
+    color:#999;
     border:none;
+    font-weight: normal;
     outline:none;
     border-radius:1px;
     display: inline-block;
@@ -89,7 +97,7 @@ input.lobbysearch {
     -moz-appearance:none;
     appearance:none;
     cursor:pointer;
-    padding-right:70px;
+    padding-right:35px;
 
   }
 
