--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -14,7 +14,7 @@
 						<input type="text" placeholder="Suchen Sie nach Politikern und Firmen" class="lobbysearch form-control">
 						<span class="input-group-btn">
 							<button class="btn-lobbysearch btn btn-primary" type="button"><i class="fa fa-search"></i></button>
-						</span>
+						</span> 
 					</div>
 				</form>
 				{{>vizinfo}}
@@ -22,6 +22,7 @@
 
 			<div class="col-sm-6 hidden-xs col-sm-pull-6 viewport-visual">
 				<form class="theme-switch" name="form">
+				<div class="theme-switch-label">Ansicht:</div>
 					<label>
 						<select name="link" SIZE="1" onChange="window.location.href = document.form.link.options[document.form.link.selectedIndex].value;">
 							<option selected value="/verbindungssuche"> Gesamtansicht </option>
