--- a/assets/views/footer.mustache
+++ b/assets/views/footer.mustache
@@ -1,4 +1,4 @@
-<script type="text/javascript" src=https://script.ioam.de/iam.js language="JavaScript"></script>
+<script type="text/javascript" src="https://script.ioam.de/iam.js" language="JavaScript"></script>
 <script type="text/javascript"> 
   var iam_data = { 
         "st":"heute",
