--- a/assets/views/relation.mustache
+++ b/assets/views/relation.mustache
@@ -11,6 +11,8 @@
       </div>
       <div class="col-sm-6 hidden-xs col-sm-pull-6 viewport-visual">
         <form class="theme-switch" name="form">
+                <div class="theme-switch-label">Ansicht:</div>
+
           <label>
             <select name="link" SIZE="1" onChange="window.location.href = document.form.link.options[document.form.link.selectedIndex].value;">
               <option selected value=""> </option>
