--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6330,13 +6330,20 @@ input.lobbysearch {
   z-index: 99;
   /* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
 }
+.theme-switch .theme-switch-label {
+  float: left;
+  background: #FFF;
+  color: #999;
+  padding: 10px 0px 10px 15px;
+}
 .theme-switch select {
   padding: 10px;
   margin: 0;
   width: 100%;
   background: #FFF;
-  color: #888;
+  color: #999;
   border: none;
+  font-weight: normal;
   outline: none;
   border-radius: 1px;
   display: inline-block;
@@ -6344,7 +6351,7 @@ input.lobbysearch {
   -moz-appearance: none;
   appearance: none;
   cursor: pointer;
-  padding-right: 70px;
+  padding-right: 35px;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   .theme-switch .theme-switch select {
