--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -20,7 +20,7 @@
 				{{>vizinfo}}
 			</div>
 
-			<div class="col-sm-6 hidden-xs col-sm-pull-6 viewport-visual">
+			<div class="col-sm-6 col-sm-pull-6 viewport-visual">
 				<form class="theme-switch" name="form">
 				<div class="theme-switch-label">Ansicht:</div>
 					<label>
