--- a/assets/views/relation.mustache
+++ b/assets/views/relation.mustache
@@ -9,7 +9,7 @@
       <div class="col-sm-6 viewport-info col-sm-push-6">
         {{>vizinfo}}
       </div>
-      <div class="col-sm-6 hidden-xs col-sm-pull-6 viewport-visual">
+      <div class="col-sm-6 col-sm-pull-6 viewport-visual">
         <form class="theme-switch" name="form">
                 <div class="theme-switch-label">Ansicht:</div>
 
