manually include articles from zdf

--- a/assets/views/articles.mustache
+++ b/assets/views/articles.mustache
@@ -12,6 +12,31 @@
 			</div>
 			<div class="col-sm-8">
 				<div class="articles">
+
+					<div class="article">
+						<h2>ZDF-Lobbyradar startet</h2>
+						<h3>Entdecken Sie das Netzwerk der Macht</h3>
+						<p>In Berlin gibt es über 600 Bundestagsabgeordnete und fast zehnmal so viele Lobbyisten. In Deutschland sind es noch viel mehr. Viele sehen in ihnen die wahren Strippenzieher. Wer gehört zum Netzwerk der Macht? Das neue ZDF-Lobbyradar schafft Transparenz – egal wo die User im Internet surfen.</p>
+						<a role='button' target='_blank' class='btn-ext btn btn-info' href="http://www.heute.de/zdf-lobbyradar-startet-entdecken-sie-das-netzwerk-der-macht-38273614.html">Zum Artikel gehen</a>
+						<br/><br/>
+					</div>
+
+					<div class="article">
+						<h2>Pharmalobby</h2>
+						<h3>Pharmaindustrie umgarnt Arzneimittelkommission</h3>
+						<p>Medikamente werden immer teurer. Wie teuer genau, das wird in einem Verfahren festgelegt, bei dem auch die Arzneimittelkommission der deutschen Ärzteschaft angehört wird - als unabhängiger Sachverständiger. Doch ZDFLobbyradar-Recherchen zeigen, dass mehr als 40 Prozent der ordentlichen Kommissionsmitglieder in den letzten Jahren persönlich Geld von Pharmafirmen bekommen haben.</p>
+						<a role='button' target='_blank' class='btn-ext btn btn-info' href="http://www.heute.de/pharmaindustrie-umgarnt-arzneimittelkommission-38325386.html">Zum Artikel gehen</a>
+						<br/><br/>
+					</div>
+
+					<div class="article">
+						<h2>Kleine Lobbygruppen</h2>
+						<h3>Von Seemannsfrauen und Orchideenfreunden</h3>
+						<p>Sie kämpfen für den Lebensraum der Wildtiere, für freie Sexualität, den Erhalt der Orchideen oder eine Verbesserung der Rechte von Seemannsfrauen: Fast 800 Seiten umfasst das Lobbyregister beim Deutschen Bundestag. Neben den großen Lobbyorganisationen tummeln sich hier auch jede Menge kleine Interessenverbände.</p>
+						<a role='button' target='_blank' class='btn-ext btn btn-info' href="http://www.heute.de/kleine-lobbygruppen-im-bundestag-38312064.html">Zum Artikel gehen</a>
+						<br/><br/>
+					</div>
+
 				</div>
 			</div>		
 		</div>
