add credits and mailto links

--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -81,7 +81,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-               Wir versuchen, alle relevanten Lobby-Akteure und deren Verbindungen abzubilden. Es gibt aber Personen und Organisationen, die nicht in unseren Datensätzen und auch nicht in den Medien auftauchen. Deshalb sind sie in unserer Datenbank nicht zu finden - selbst, wenn sie Verbindungen zu Lobbyverbänden haben. Sie fliegen (noch) unter dem Lobbyradar-Schirm. Wir wollen das ändern und Sie können uns dabei helfen. Wenn Sie Lobbyismus transparenter machen und Akteure und Verbindungen ergänzen wollen, einfach hier klicken!
+               Wir versuchen, alle relevanten Lobby-Akteure und deren Verbindungen abzubilden. Es gibt aber Personen und Organisationen, die nicht in unseren Datensätzen und auch nicht in den Medien auftauchen. Deshalb sind sie in unserer Datenbank nicht zu finden - selbst, wenn sie Verbindungen zu Lobbyverbänden haben. Sie fliegen (noch) unter dem Lobbyradar-Schirm. Wir wollen das ändern und Sie können uns dabei helfen. Wenn Sie Lobbyismus transparenter machen und Akteure und Verbindungen ergänzen wollen, einfach <a href="mailto:lobbyradar@zdf.de">hier</a> klicken!
                <br/><br/>
                Verstorbene Personen, die zu ihren Lebzeiten prägnante Verbindungen hatten, sind nicht Bestandteil von Lobbyradar.
               </div>
@@ -111,7 +111,7 @@ Wie kann ich Verbindungen korrigieren oder ergänzen?
             </div>
             <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Lobbyradar soll aktuell bleiben und wachsen. Doch dazu brauchen wir Hilfe! Haben wir eine Person oder Institution vergessen, die unbedingt in die Datenbank gehört? Oder fehlt eine Verbindung einer Person? Dann können Sie uns das über den Button “Verbindung melden” mitteilen. Auch falsche Verbindungen können über den Button “Fehler melden” an uns gemeldet werden. Wir prüfen alle Infos und ergänzen oder ändern sie in der Datenbank.
+                Lobbyradar soll aktuell bleiben und wachsen. Doch dazu brauchen wir Hilfe! Haben wir eine Person oder Institution vergessen, die unbedingt in die Datenbank gehört? Oder fehlt eine Verbindung einer Person? Dann können Sie uns das über den Button “Verbindung melden” mitteilen. Auch falsche Verbindungen können über den Button “Fehler melden” an uns gemeldet werden. Wir prüfen alle Infos und ergänzen oder ändern sie in der Datenbank. Oder schicken Sie uns direkt eine <a href="mailto:lobbyradar@zdf.de">E-Mail</a>.
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@ Wie kann ich Verbindungen korrigieren oder ergänzen?
             </div>
             <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Das Lobbyradar-Netzwerk funktioniert auch auf Smartphones und Tablets. Für die Browser-Erweiterung haben wir bisher leider keine mobile Lösung. Hinweise, Tipps oder Anregungen nehmen wir aber gerne an - <a hreF="#">hier klicken!</a>
+                Das Lobbyradar-Netzwerk funktioniert auch auf Smartphones und Tablets. Für die Browser-Erweiterung haben wir bisher leider keine mobile Lösung. Hinweise, Tipps oder Anregungen nehmen wir aber gerne an - <a href="mailto:lobbyradar@zdf.de">hier klicken!</a>
               </div>
             </div>
           </div>
