fix typos in abspann

--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -41,15 +41,15 @@ Alexandra Zurwonne (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.d
 Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes</a>a><br />
 <br />
 Animation / Design Erklärfilm:<br />
-Lars Werner (<a href="http://wernersolutions.de>" title="zu wernersolutions.de">wernersolutions.de</a>)<br />
+Lars Werner (<a href="http://wernersolutions.de" target="_blank" title="zu wernersolutions.de">wernersolutions.de</a>)<br />
 <br />
 Musik / Sounddesign Erklärfilm:<br />
-Stefan Gerber (<a href="http://epicminor.de" title="zu epicminor.de">epicminor.de</a>)
+Stefan Gerber (<a href="http://epicminor.de" target="_blank" title="zu epicminor.de">epicminor.de</a>)
 <br /><br /><br />
-<a href="https://www.facebook.com/zdflobbyradar" alt="Impressum ZDF">ZDFLobbyradar (Facebook)</a><br />
-<a href="https://twitter.com/zdflobbyradar" alt="Impressum ZDF">@ZDFLobbyradar (Twitter)</a><br /><br />
-<a href="http://www.zdf.de/impressum-21494968.html" alt="Impressum ZDF">Impressum</a><br />
-<a href="mailto:lobbyradar@zdf.de?subject=Kontakt" alt="Kontakt ZDF">Kontakt</a>
+<a href="https://www.facebook.com/zdflobbyradar" target="_blank" alt="Facebook ZDFLobbyradar">ZDFLobbyradar (Facebook)</a><br />
+<a href="https://twitter.com/zdflobbyradar" target="_blank" alt="Twitter ZDFLobbyradar">@ZDFLobbyradar (Twitter)</a><br /><br />
+<a href="http://www.zdf.de/impressum-21494968.html" target="_blank" alt="Impressum ZDF">Impressum</a><br />
+<a href="mailto:lobbyradar@zdf.de?subject=Kontakt" target="_blank" alt="Kontakt ZDF">Kontakt</a>
 
 </p>
 
