--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6369,6 +6369,11 @@ input.lobbysearch {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  /* this apperarently helps hiding the dropdown arrow in FireFox prior to v30*/
+  /* The bug is fixed in FF v35 */
+  /* https://gist.github.com/joaocunha/6273016 */
+  text-indent: 0.01px;
+  text-overflow: ' ';
   cursor: pointer;
   padding-right: 35px;
 }
