small typo in abspann

--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -38,7 +38,7 @@ Jens Moeke, Rolf Zimmermann (<a href="http://www.zdf.de/" target="_blank" title=
 <br />
 Produktion:<br />
 Alexandra Zurwonne (<a href="http://www.zdf.de/" target="_blank" title="Zu zdf.de">ZDF</a>)<br />
-Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes</a>a><br />
+Mit Dank an Alexander Barnickel, Jonas Bergmeier (<a href="http://cahoots.pw/" target="_blank" title="Zu cahoots.pw">Projekt Cahoots</a>) und <a href="http://www.tigerbytes.de/" target="_blank" title="Zu tigerbytes.de">Tigerbytes</a><br />
 <br />
 Animation / Design Erklärfilm:<br />
 Lars Werner (<a href="http://wernersolutions.de" target="_blank" title="zu wernersolutions.de">wernersolutions.de</a>)<br />
